--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">December 19, 2022</span>
+									<h2><a href="#">A Beginner's Guide in<br />
+									Choosing an Indoor Plant</a></h2>
+									<p>A Tableau visual dashboard of plant recommendations based on geographic location.<br />
+									Data wrangling was performed to curate the analysis through merging various data sources which included plant, sunlight, and humidity data.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -210,7 +209,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Jack Trinh 2023</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; 2023 Jack Trinh</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
