--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/jacktrinity/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -55,14 +55,14 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">December 19, 2022</span>
-									<h2><a href="#">A Beginner's Guide in<br />
+									<h2><a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link">A Beginner's Guide in<br />
 									Choosing an Indoor Plant</a></h2>
-									<p>A Tableau visual dashboard of plant recommendations based on geographic location.<br />
+									<p>A Tableau visual story dashboard of plant recommendations based on geographic location.<br />
 									Data wrangling was performed to curate the analysis through merging various data sources which included plant, sunlight, and humidity data.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -201,7 +201,7 @@
 									<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
 									<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 									<!--<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/jacktrinity/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
