--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<h2><a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link">A Beginner's Guide in<br />
 									Choosing an Indoor Plant</a></h2>
 									<p>A Tableau visual story dashboard of plant recommendations based on geographic location.<br />
-									Data wrangling was performed to curate the analysis through merging various data sources which included plant, sunlight, and humidity data.</p>
+									Data wrangling was performed to curate the analysis through merging various data sources which included plant, sunlight, and humidity data. For the best experience, view in full screen located at the bottom right corner of the dashboard.</p>
 								</header>
 								<a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
