--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>JACK TRINH<br />
 						PORTFOLIO</h1>
-						<p>Full Stack Data Science and Engineering<br />
+						<p>Full Stack Data Analyst and Engineer<br />
 						Skilled in Python, SQL, Azure, AWS, Power BI, and Tableau</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
