--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<h2><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link">EV Stations<br />
 										Market Research</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
@@ -97,7 +97,7 @@
 										<!--<span class="date">April 18, 2017</span>-->
 										<h2><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link">Natural Gas Prices</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
