--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- Post 1 -->
 								<article>
 									<header>
 										<!--<span class="date">April 24, 2017</span>-->
@@ -80,18 +81,19 @@
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!-- Post 2 -->
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<!--<span class="date">April 22, 2017</span>-->
+										<h2><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link">Natural Gas Price</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!-- Post 3 -->
 								<article>
 									<header>
 										<!--<span class="date">April 18, 2017</span>-->
