--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
 								<article>
 									<header>
 										<!--<span class="date">April 18, 2017</span>-->
-										<h2><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link">Natural Gas Prices</a></h2>
+										<h2><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb">AFDC API Data Pull<br />
+										and Transformation</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
+									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
+										<li><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
