--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 										<h2><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb">AFDC API Data Pull<br />
 										and Transformation</a></h2>
 									</header>
-									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
+									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/afdc_logo.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="button">View Project</a></li>
