--- a/index.html
+++ b/index.html
@@ -106,16 +106,17 @@
 										<li><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!-- Post 4 -->
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<!--<span class="date">April 14, 2017</span>-->
+										<h2><a href="#">Baywheel Ride Cost<br />
+										and Revenue for 2020 to 2021</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
