--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 								<article>
 									<header>
 										<!--<span class="date">April 14, 2017</span>-->
-										<h2><a href="#">Baywheel Ride Cost<br />
-										and Revenue for 2020 to 2021</a></h2>
+										<h2><a href="#">Baywheel Ride Cost and<br />
+										Revenue for 2020 to 2021</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/baywheel.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
