--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 								<article>
 									<header>
 										<!--<span class="date">April 14, 2017</span>-->
-										<h2><a href="#">Baywheel Ride Cost and<br />
+										<h2><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql">Baywheel Ride Cost and<br />
 										Revenue for 2020 to 2021</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/baywheel.png" alt="" /></a>
+									<a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="image fit"><img src="images/baywheel.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
