--- a/index.html
+++ b/index.html
@@ -119,16 +119,17 @@
 										<li><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!-- Post 5 -->
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<!--<span class="date">April 11, 2017</span>-->
+										<h2><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb">Databricks with Pyspark<br />
+										Data Pipeline Template</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="image fit"><img src="images/databricks_logo.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
