--- a/index.html
+++ b/index.html
@@ -132,16 +132,17 @@
 										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!-- Post 6 -->
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py">Web Scrapping<br />
+										EV DCFC Stations </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="image fit"><img src="images/scrapper_img.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
