--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										<h2><a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py">Web Scrapping<br />
 										EV DCFC Stations </a></h2>
 									</header>
-									<a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="image fit"><img src="images/scrapper_img.png" alt="" /></a>
+									<a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="image fit"><img src="images/webscrape.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="button">View Project</a></li>
