--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Home Page</a>
 					</header>
 
 				<!-- Nav -->
@@ -33,7 +33,7 @@
 							<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 							<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 							<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/jacktrinity" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -45,14 +45,15 @@
 								<header class="major">
 									<!--<span class="date">April 25, 2017</span>-->
 									<h1>About</h1>
-									<p>I have a passion for all things data - I love digging into data and finding insights that others might miss. When I'm not working with data, you'll likely find me scaling the walls at my local rock climbing gym or hitting the courts for a game of tennis.</p>
+									<p>I have a passion for all things data - I love digging into data and finding insights that others might miss.<br>
+									When I'm not working with data, you'll likely find me scaling the walls at my local rock climbing gym or hitting the courts for a game of tennis.</p>
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
-								<p>Hello, and welcome to my "About Me" page! My name is Jack Trinh, and I am a data engineer with experience building data pipelines and visualizations using a variety of tools and technologies.</p>
+								<p>Hello, and welcome to my "About Me" page! My name is Jack, and I am a data engineer with experience building data pipelines and visualizations using a variety of tools and technologies.</p>
 								<p>At the heart of my work is a passion for making data accessible and useful to others. I believe that well-designed data pipelines and visualizations can empower individuals and organizations to make better decisions, identify new opportunities, and solve complex problems.</p>
 								<p>In my work, I rely on a number of different technologies to get the job done. For data pipelines, I primarily use Azure Data Factory and Synapse, which are both powerful and flexible tools for managing and processing data at scale. For ETL, I turn to Databricks, which allows me to quickly and easily manipulate data using Python, Pandas, and PySpark.</p>
 								<p>When it comes to querying and analyzing data, I'm well-versed in SQL and have experience working with a variety of databases, both in the cloud and on-premises. And when it's time to present that data to others, I turn to Power BI and Tableau to build interactive dashboards that make it easy to explore and understand complex data sets.</p>
-								<p>Overall, I take a collaborative and iterative approach to my work, working closely with stakeholders to understand their needs and continuously refining my solutions to ensure that they meet those needs as effectively as possible. If you're interested in learning more about my work or discussing a potential project, please don't hesitate to get in touch!</p>
+								<p>Overall, I take a collaborative and iterative approach to my work, working closely with stakeholders to understand their needs and continuously refining my solutions to ensure that they meet those needs as effectively as possible. If you're interested in learning more about my work or discussing a potential opportunity, please don't hesitate to get in touch!</p>
 							</section>
 
 					</div>
@@ -99,7 +100,7 @@
 									<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
 									<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 									<!--<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/jacktrinity" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
