--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h2><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link">EV Stations<br />
 										Market Research</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" alt="" /></a>
+									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" width="1008" height="491" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
@@ -87,7 +87,7 @@
 										<!--<span class="date">April 22, 2017</span>-->
 										<h2><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link">Natural Gas Price</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" alt="" /></a>
+									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" width="1008" height="491" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
@@ -100,7 +100,7 @@
 										<h2><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb">AFDC API Data Pull<br />
 										and Transformation</a></h2>
 									</header>
-									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/afdc_logo_v2.jpg" alt="" /></a>
+									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/afdc_logo_v2.jpg" width="504" height="245" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="button">View Project</a></li>
@@ -113,7 +113,7 @@
 										<h2><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql">Baywheel Ride Cost and<br />
 										Revenue for 2020 to 2021</a></h2>
 									</header>
-									<a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="image fit"><img src="images/baywheel.png" alt="" /></a>
+									<a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="image fit"><img src="images/baywheel.png" width="504" height="245" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="button">View Project</a></li>
