--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<header>
 										<!--<span class="date">April 22, 2017</span>-->
 										<h2><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link">Natural Gas Price<br />
-										vs S&P500</a></h2>
+										and S&P500 Trend</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" width="1008" height="491" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
