--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										Market Research</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" width="1008" height="491" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A Tableau visual story dashboard on the current state of EV station market. Various data sources have to be joined to provide an analysis for trends in consumer usage, location, and availability.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
