--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										and S&P500 Trend</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/natural_gas.png" width="1008" height="491" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This project involves comparing the trends in natural gas prices and the S&P500 index. The aim is to determine if there is a correlation between these two variables and if one can be used to predict the other. By analyzing the historical data and identifying the patterns, we can gain insights into the behavior of these two assets and potentially make informed investment decisions.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/NaturalGasPrice/NaturalGasPrices?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
