--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										Market Research</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" width="1008" height="491" alt="" /></a>
-									<p>A Tableau visual story dashboard on the current state of EV station market. Various data sources have to be joined to provide an analysis for trends in consumer usage, location, and availability. Through this project, I hope to provide insights that will help inform future strategies and decisions related to the development and marketing of EV charging stations.</p>
+									<p>A Tableau visual story dashboard on the current state of EV station market. Various data sources from AFDC and EV car sales data were joined to provide an analysis for trends in consumer usage, location, and availability. Through this project, I hope to provide insights that will help inform future strategies and decisions related to the development and marketing of EV charging stations.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
