--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 									<!--<span class="date">December 19, 2022</span>-->
 									<h2><a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link">A Beginner's Guide in<br />
 									Choosing an Indoor Plant</a></h2>
-									<p>A Tableau visual story dashboard of plant recommendations based on geographic location.<br />
-									Data wrangling was performed to curate the analysis through merging various data sources which included plant, sunlight, and humidity data. For the best experience, view in full screen located at the bottom right corner of the dashboard.</p>
+									<p>This project aims to create a guide for indoor plants based on their preferred levels of sunlight and humidity. The project involves data wrangling to join datasets on plant characteristics, sunlight levels, and humidity requirements. By analyzing the data and creating a guide, users will be able to select the best indoor plants for their living spaces based on their unique conditions.<br />
+									<br />A Tableau visual story dashboard<br />
+									For the best experience, view in full screen located at the bottom right corner of the dashboard.</p>
 								</header>
 								<a href="https://public.tableau.com/views/ABeginnersGuidetoIndoorPlant2022/ABeginnersGuidetoIndoorPlant2022?:language=en-US&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/plant_project.png" alt="" /></a>
 								<ul class="actions special">
