--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										Market Research</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/ev_stations.png" width="1008" height="491" alt="" /></a>
-									<p>A Tableau visual story dashboard on the current state of EV station market. Various data sources from AFDC and EV car sales data were joined to provide an analysis for trends in consumer usage, location, and availability. Through this project, I hope to provide insights that will help inform future strategies and decisions related to the development and marketing of EV charging stations.</p>
+									<p>This project aims to research the market trends for EV adoption and the number of EV stations available in different locations. The research will involve data collection and analysis to determine the demand for EV charging stations and the number of EV vehicles in different areas. Based on this analysis, recommendations can be made to install more EV stations in locations with a higher number of EV vehicles, improving access and convenience for EV owners. Through this project, I hope to provide insights that will help inform future strategies and decisions related to the development of EV charging stations.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/EVStationMarketResearch/Presentation?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
