--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										Revenue for 2020 to 2021</a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="image fit"><img src="images/baywheel.png" width="504" height="245" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This project involves using Python to make API requests to the AFDC (Alternative Fuels Data Center) and retrieve data about EV charging stations. The data is then processed through scrubbing, transformation, and loaded into a table.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="button">View Project</a></li>
 									</ul>
