--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										and Transformation</a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="image fit"><img src="images/afdc_logo_v2.jpg" width="504" height="245" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This project involves using Python to make API requests to the AFDC (Alternative Fuels Data Center) and retrieve data about EV charging stations. The data is then processed through scrubbing, transformation, and loaded into a table.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/AFDC-API-and-Transformation/blob/main/AFDC_API_and_Transformation.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -116,7 +116,7 @@
 										Revenue for 2020 to 2021</a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="image fit"><img src="images/baywheel.png" width="504" height="245" alt="" /></a>
-									<p>This project involves using Python to make API requests to the AFDC (Alternative Fuels Data Center) and retrieve data about EV charging stations. The data is then processed through scrubbing, transformation, and loaded into a table.</p>
+									<p>This project involves using Python and SQL Alchemy to upload Baywheel ride data, which is available publicly on their site by year, to a PostgreSQL database. Once the data is uploaded, two SQL scripts are created. The first script calculates the cost per ride session, providing valuable insights into the pricing structure and overall cost-effectiveness of the Baywheel service. The second script aggregates all the ride session data by year and month, showing how much ride time, distance traveled, and cost for each date. This information can be used to analyze trends over time, identify peak usage periods, and optimize operations to maximize efficiency and profitability. Overall, this project demonstrates the power of data analysis and visualization in optimizing business operations and improving customer experiences.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/Baywheel-Price-Cost-and-Revenue/blob/main/baywheel_cost_query.sql" class="button">View Project</a></li>
 									</ul>
