--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>JACK TRINH<br />
 						PORTFOLIO</h1>
-						<p>Full Stack Data Analyst and Engineer<br />
+						<p>Data Engineer<br />
 						Skilled in Python, SQL, Azure, AWS, Power BI, and Tableau</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -129,7 +129,7 @@
 										Data Pipeline Template</a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="image fit"><img src="images/databricks_logo.png" width="504" height="245" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this coding template you can see several snippets of how I use Databricks' features to efficiently and reliably move data from various sources, apply necessary transformations, and load it into a target system.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
 									</ul>
