--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										Data Pipeline Template</a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="image fit"><img src="images/databricks_logo.png" width="504" height="245" alt="" /></a>
-									<p>In this coding template you can see several snippets of how I use Databricks' features to efficiently and reliably move data from various sources, apply necessary transformations, and load it into a target system.</p>
+									<p>In this coding sample you can see several snippets of how I use Databricks' features to efficiently and reliably move data from various sources, apply necessary transformations, and load it into a target system.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -142,7 +142,7 @@
 										EV DCFC Stations </a></h2>
 									</header>
 									<a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="image fit"><img src="images/webscrape.png" width="504" height="245" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I developed a web scraper in Python that efficiently collects essential data about Electric Vehicle (EV) DC Fast Chargers from various online sources. EV DC Fast Chargers play a crucial role in the electrification of transportation, and having access to up-to-date information is essential for both consumers and industry professionals. This web scraper is designed to help you gather valuable insights and stay informed about the latest charger locations, availability, and technical details.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/EV_DCFC_WEBSCRAPE/blob/main/SCRAPE_EV_INFO.py" class="button">View Project</a></li>
 									</ul>
