--- a/generic.html
+++ b/generic.html
@@ -48,7 +48,7 @@
 									<p>I have a passion for all things data - I love digging into data and finding insights that others might miss.<br>
 									When I'm not working with data, you'll likely find me scaling the walls at my local rock climbing gym or hitting the courts for a game of tennis.</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/aboutme_photo.jpg" alt="" /></div>
 								<p>Hello, and welcome to my "About Me" page! My name is Jack, and I am a data engineer with experience building data pipelines and visualizations using a variety of tools and technologies.</p>
 								<p>At the heart of my work is a passion for making data accessible and useful to others. I believe that well-designed data pipelines and visualizations can empower individuals and organizations to make better decisions, identify new opportunities, and solve complex problems.</p>
 								<p>In my work, I rely on a number of different technologies to get the job done. For data pipelines, I primarily use Azure Data Factory and Synapse, which are both powerful and flexible tools for managing and processing data at scale. For ETL, I turn to Databricks, which allows me to quickly and easily manipulate data using Python, Pandas, and PySpark.</p>
