--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 								<article>
 									<header>
 										<!--<span class="date">April 11, 2017</span>-->
-										<h2><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb">Databricks with Pyspark<br />
-										Data Pipeline Template</a></h2>
+										<h2><a href="https://jacktrinh.pythonanywhere.com/?input=helloworld">Python-based API<br />
+										Hosted on PythonAnywhere</a></h2>
 									</header>
-									<a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="image fit"><img src="images/databricks_logo.png" width="504" height="245" alt="" /></a>
-									<p>In this coding sample you can see several snippets of how I use Databricks' features to efficiently and reliably move data from various sources, apply necessary transformations, and load it into a target system.</p>
+									<a href="https://jacktrinh.pythonanywhere.com/?input=helloworld" class="image fit"><img src="images/api_image.jpg" width="504" height="245" alt="" /></a>
+									<p>The API takes a user input and returns a response in a well-structured JSON object containing a timestamp and the character count of the input text. This project is a sample of how I used the Flask framework to create a sample API. Creating an API allows applications to streamlined functionality. The application is hosted on pythonanywhere.com.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
 									</ul>
