--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									<a href="https://jacktrinh.pythonanywhere.com/?input=helloworld" class="image fit"><img src="images/api_image.jpg" width="504" height="245" alt="" /></a>
 									<p>The API takes a user input and returns a response in a well-structured JSON object containing a timestamp and the character count of the input text. This project is a sample of how I used the Flask framework to create a sample API. Creating an API allows applications to streamlined functionality. The application is hosted on pythonanywhere.com.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/jacktrinity/databricks-and-pyspark-notes/blob/main/databricks_pyspark.ipynb" class="button">View Project</a></li>
+										<li><a href="https://jacktrinh.pythonanywhere.com/?input=helloworld" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!-- Post 6 -->
